fixed link underline on safari

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -139,14 +139,17 @@ p, blockquote, ul, ol {
 
 		color: $color-gray-lighter;
 
+		// Some information on this technique: https://eager.io/blog/smarter-link-underlines/
+
 		/* Creates a text underline with a gradient */
 		background-image: linear-gradient(#fff, #fff),
 											linear-gradient(#fff, #fff),
 											linear-gradient($color-gray-lighter, $color-gray-lighter);
 
-		background-size: 0.1em   0.01em,
-										 0.1em   0.07em,
-										 0.07em, 0.07em;
+
+		background-size: 0.1em  1px,
+										 0.1em  1px,
+										 1px 1px;
 
 		background-repeat: no-repeat,no-repeat, repeat-x;
 		background-position-y: 90%, 90%, 90%;
